--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 			<div class="row">
 				<div class="col-md-6 text-left">
 					<a href="<%= root_url %>" style="font-family: 'Geo',sans-serif; font-size: larger">
-            <img src="http://phantasma.io/img/phantasma_logo_vector.png" width="32" style="margin-right: 10px" />PHANTASMA PROTOCOL</a>
+            <img src="http://phantasma.io/img/phantasma_monochrome.svg" width="32" style="margin-right: 10px" />PHANTASMA PROTOCOL</a>
 				</div>
 
         <% if controller_name == 'main' %>
@@ -46,7 +46,7 @@
                 <a class="dropdown-item" href="#">demo2@phantasma.io</a>
                 <a class="dropdown-item" href="#">demo3@phantasma.io</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Add Mailbox</a>
+                <a class="dropdown-item" id="add-mailbox" href="#">Add Mailbox</a>
               </div>
             </div>
   				</div>
