--- a/app/views/main/inbox.html.erb
+++ b/app/views/main/inbox.html.erb
@@ -3,8 +3,102 @@
 
 <center>
   <div class="panel">
-    <div class="col-sm-9 col-md-9"><div class="btn-group"><button type="button" class="btn btn-default"><div class="checkbox" style="margin: 0;"><label><input type="checkbox"></label></div></button><button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span><span class="sr-only">Toggle Dropdown</span></button><ul class="dropdown-menu" role="menu"><li><a href="#">All</a></li><li><a href="#">None</a></li><li><a href="#">Read</a></li><li><a href="#">Unread</a></li></ul></div><button type="button" class="btn btn-default" data-toggle="tooltip" title="Refresh"> &nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-refresh"></span>&nbsp;&nbsp;&nbsp;</button><div class="pull-right"><span class="text-muted"><b>1</b>–<b>50</b> of <b>160</b></span><div class="btn-group btn-group-sm"><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-chevron-left"></span></button><button type="button" class="btn btn-default"><span class="glyphicon glyphicon-chevron-right"></span></button></div></div></div>
+    <div class="clearfix">
+      <div class="pull-left">
+        <div class="dropdown">
+          <button class="btn action-btn dropdown-toggle" type="button" id="mailSelectionDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            None
+          </button>
+          <ul class="dropdown-menu light" aria-labelledby="mailSelectionDropdown">
+            <a class="dropdown-item" href="#">All</a>
+            <a class="dropdown-item" href="#">None</a>
+            <a class="dropdown-item" href="#">Read</a>
+            <a class="dropdown-item" href="#">Unread</a>
+          </ul>
+        </div>
 
-    <ul class="nav nav-tabs"><li class="active"><a href="#home" data-toggle="tab"><span class="glyphicon glyphicon-inbox"></span>Received</a></li><li><a href="#profile" data-toggle="tab"><span class="glyphicon glyphicon-upload"></span> Sent</a></li><li><a href="#messages" data-toggle="tab"><span class="glyphicon glyphicon-pencil"></span> Drafts</a></li></ul><div class="tab-content"><div class="tab-pane fade in active" id="home"><div class="list-group">   <a href="#" class="list-group-item"><div class="checkbox"><label><input type="checkbox"></label></div><span class="name" style="min-width: 120px; display: inline-block;">bambi</span><span class="">GAS test</span><span class="text-muted" style="font-size: 11px;">- Testing some GAS...</span><span class="badge">12:10 AM</span><span class="pull-right"></span></a>   </div></div><div class="tab-pane fade in" id="profile"><div class="list-group"><div class="list-group-item"><span class="text-center">Nothing here.</span></div></div></div><div class="tab-pane fade in" id="messages"><div class="list-group"><div class="list-group-item"><span class="text-center">Nothing here.</span></div></div></div><div class="tab-pane fade in" id="settings"> This tab is empty.</div></div>
+        <div class="dropdown">
+          <button class="btn action-btn dropdown-toggle" type="button" id="mailPaneDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            Received
+          </button>
+          <ul class="dropdown-menu light" aria-labelledby="mailPaneDropdown">
+            <a class="dropdown-item" href="#">Received</a>
+            <a class="dropdown-item" href="#">Sent</a>
+            <a class="dropdown-item" href="#">Drafts</a>
+          </ul>
+        </div>
+      </div>
+
+      <div class="pull-right text-muted" id="paneNavigation">
+        <a id="pageNavBack" href="#"><<</a>
+        <b><span id="pageItemsStart"></span> </b>&ndash;<b> <span id="pageItemsEnd"></span></b>
+        <a id="pageNavForward" href="#">>></a>
+      </div>
+    </div>
+
+    <div id="emailsList">
+
+    </div>
+
+    <div class="tab-content"><div class="tab-pane fade in active" id="home"><div class="list-group">   <a href="#" class="list-group-item"><div class="checkbox"><label><input type="checkbox"></label></div><span class="name" style="min-width: 120px; display: inline-block;">bambi</span><span class="">GAS test</span><span class="text-muted" style="font-size: 11px;">- Testing some GAS...</span><span class="badge">12:10 AM</span><span class="pull-right"></span></a>   </div></div><div class="tab-pane fade in" id="profile"><div class="list-group"><div class="list-group-item"><span class="text-center">Nothing here.</span></div></div></div><div class="tab-pane fade in" id="messages"><div class="list-group"><div class="list-group-item"><span class="text-center">Nothing here.</span></div></div></div><div class="tab-pane fade in" id="settings"> This tab is empty.</div></div>
+
   </div>
 </center>
+
+<script>
+  var elem = document.getElementById('pageNavBack');
+  elem.addEventListener('click', function(event) {
+    event.preventDefault();
+
+    PH.inboxPane.page -= 1;
+
+    inboxPaneUpdate();
+  });
+
+  elem = document.getElementById('pageNavForward');
+  elem.addEventListener('click', function(event) {
+    event.preventDefault();
+
+    PH.inboxPane.page += 1;
+
+    inboxPaneUpdate();
+  });
+
+  window.inboxPaneUpdate = function() {
+    var elem = document.getElementById('paneNavigation');
+    if (PH.inboxPane.items.length > 0) {
+      elem.style.display = 'initial';
+
+      elem = document.getElementById('pageNavBack');
+      if (PH.inboxPane.page > 0) {
+        elem.style.display = 'initial';
+      } else {
+        elem.style.display = 'none';
+      }
+
+      elem = document.getElementById('pageNavForward');
+      if ((PH.inboxPane.page + 1) * PH_ITEMS_PER_PAGE < PH.inboxPane.items.length) {
+        elem.style.display = 'initial';
+      } else {
+        elem.style.display = 'none';
+      }
+
+      elem = document.getElementById('pageItemsStart');
+      elem.innerHTML = '' + (PH.inboxPane.page * PH_ITEMS_PER_PAGE + 1);
+
+      elem = document.getElementById('pageItemsEnd');
+      elem.innerHTML = '' + Math.min((PH.inboxPane.page + 1) * PH_ITEMS_PER_PAGE, PH.inboxPane.items.length);
+
+      elem = document.getElementById('emailsList');
+      var items = PH.inboxPane.items.slice(PH.inboxPane.page * PH_ITEMS_PER_PAGE, (PH.inboxPane.page + 1) * PH_ITEMS_PER_PAGE - 1);
+
+      elem.innerHTML = '<div class="pane">' + items.map(function(email) {
+        return '<div class="row pane-item"><div class="col-md-3 sender-and-date">' + email.sender + '<br/>' + timestampToDateString(email.date) + '</div><div class="col-md-9 body">' + email.message + '</div></div>';
+      }).join('') + '</div>';
+    } else {
+      elem.style.display = 'none';
+    }
+  };
+
+  inboxPaneUpdate();
+</script>
